fixed navbar position to fixed and reset z index to pass page content behind navbar

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -16,9 +16,11 @@
 }
 
 .navbar {
-
     padding-left: 2rem;
     padding-right: 2rem;
+    position: fixed;
+    width: 100%;
+    z-index: 20;
 }
 
 .rounded-circle{
